apps/whereami/whereami-backend/k8s/overlays/non-prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: whereami-backend-dev
spec:
  host: whereami-backend.whereami-backend.svc.cluster.local
  subsets:
  - name: whereami-backend-dev
    labels:
      app: whereami-backend
      env: dev
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: whereami-backend-dev-d1a
    labels:
      app: whereami-backend
      env: dev
      deploy.cloud.google.com/target-id: d1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
