apps/whereami/whereami-backend/k8s/overlays/non-prod/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: whereami-backend-dev
spec:
  hosts:
  - whereami-backend
  http:
  - match:
    - sourceLabels:
        app: whereami-frontend
        env: dev
    route:
    - destination:
        host: whereami-backend
        subset: whereami-backend-dev
